commititng UI changes

--- a/src/main/frontend/src/app/tasks/tasks.component.html
+++ b/src/main/frontend/src/app/tasks/tasks.component.html
@@ -19,8 +19,8 @@
     </div>
         <div class ="row">
           <div class = "col-md-12">
-            <app-tasks-add>
-            </app-tasks-add>
+            <app-tasks-list>
+            </app-tasks-list>
           </div>
         </div>
   </div>
